--- a/templates/save.html
+++ b/templates/save.html
@@ -13,7 +13,9 @@
 			<br>
 		  <input type="submit" value="SUBMIT"/>
 		</form>
-
-		</body>
+		<form method="get" action="{{ url_for('getstatus') }}">
+		  <input type="submit" value="GET Status"/>
+		</form>
+	</body>
 </html>
  
